# cs1

./: README
12_if_else/: if_else.html  student.js  style.css  tests.js
14_loops_lists/: loops_lists.html  student.js  tests.js
16_timer/: timer.html  timer.js
17_calculator/: calc.js  calculator.html  style.css
19_dictionaries/: 2016-02-01-emails.js  student.js
19_dictionaries/make-email-list/: make-email-list.cabal
19_dictionaries/make-email-list/app/: Main.hs
19_dictionaries/make-email-list/src/: Lib.hs  Types.hs
21_svg/: svg.html  svg2.html  svg2.js
22_paint/: paint.html  paint.js
cs1-handouts/: 2015-09-08-html-elements.html  2015-09-08-html-jargon.html  2015-09-10-class-id-color.html  2015-10-05-html-elements.html  2015-10-22-freestyle.html  2015-11-18-javascript-syntax.html  2015-12-08-boolean-logic.txt  2015-12-15-using-loops.html  2015-12-15-using-loops.md  2016-01-21-github-cloud9.html  2016-01-28-cloud9-saving.html  2016-02-03-email-javascript.html  2016-02-03-email-javascript.md  2016-03-07-sending-messages.html  2016-03-07-sending-messages.md  2016-04-18-physics.html  2016-05-02-graphs.html  2016-05-19-final-graphs.html  2016-05-19-final-graphs.org  js-syntax.md  xaa
data/: PovertyEstimates.csv  PovertyEstimatesDescriptions.html  hydropower.csv
