name:                make-email-list
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bergey/make-email-list#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types
  build-depends:       base >= 4.7 && < 5
                     , mbox == 0.3.1
                     , process >= 1.2.3.0
                     , aeson
                     , text
                     , time
                     , time-locale-compat
  default-language:    Haskell2010

executable make-email-list-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , make-email-list
                     , optparse-applicative
                     , process >= 1.2.3.0
                     , text
                     , bytestring
                     , aeson
                     , time
                     , time-locale-compat
                     , mbox
  default-language:    Haskell2010

test-suite make-email-list-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , make-email-list
                     , process >= 1.2.3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bergey/make-email-list
